--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages About</h1>
-<p>Hier kommt irgendwann auch mal Inhalt hin.</p>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Ruby on Rails Tutorial Sample App | About</title>
+</head>
+<body>
+<h1>About Us</h1>
+<p>
+Ruby on Rails Tutorial
+is a project to make a book and screencasts to teach web development
+with Ruby on Rails. This
+is the sample application for the tutorial.
+</p>
+</body>
+</html>
