SlickGrid laeuft, aber Preloader zickt

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,49 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
-<%= csrf_meta_tag %>
+    <%= csrf_meta_tag %>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+    <META HTTP-EQUIV="EXPIRES" CONTENT="0">
+    <title>OnMaCon PMT 2.0 - SlickGrid jetzt in Ruby on Rails</title>
+
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
+
+    <link rel="stylesheet" href="/stylesheets/slick.grid.css" type="text/css"
+    	media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/slick.columnpicker.css" type="text/css"
+	    media="screen" charset="utf-8" />
+
+    <link rel="stylesheet" href="/stylesheets/start/jquery-ui-1.8.6.custom.css"
+    	type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/slick.custom.css" type="text/css"
+    	media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/slick.pager.css" type="text/css"
+    	media="screen" charset="utf-8" />
+
+    <script language="JavaScript" src="/javascripts/jquery-1.4.2.min.js"
+    	charset="utf-8"></script>
+    <script language="JavaScript" src="/javascripts/jquery-ui-1.8.6.custom.min.js"
+    	charset="utf-8"></script>
+    <script language="JavaScript" src="/javascripts/jquery.event.drag-2.0.min.js"
+	    charset="utf-8"></script>
+
+    <script language="JavaScript" src="/javascripts/slick.grid-1.4.3.js" charset="utf-8"></script>
+    <script language="JavaScript" src="/javascripts/slick.editors-1.0.js" charset="utf-8"></script>
+    <script language="JavaScript" src="/javascripts/slick.model-1.0.js" charset="utf-8"></script>
+    <script language="JavaScript" src="/javascripts/slick.pager-1.0.js" charset="utf-8"></script>
+    <script language="JavaScript" src="/javascripts/slick.columnpicker-1.0.js"
+	    charset="utf-8"></script>
+
+    <script language="JavaScript" src="/javascripts/requestcontroller-1.0.js"
+	    charset="utf-8"></script>
+    <script language="JavaScript" src="/javascripts/request-1.0.js" charset="utf-8"></script>
+    <script language="JavaScript" src="/javascripts/slick.filter-1.0.js" charset="utf-8"></script>
+    <script language="JavaScript" src="/javascripts/slick.custom-1.0.js" charset="utf-8"></script>
+
+
 </head>
 <body>
 <%= yield %>
