--- a/app/views/pages/report.html.erb
+++ b/app/views/pages/report.html.erb
@@ -1,3 +1,45 @@
-<h1>SlickGrid-Dummy</h1>
-<img src="images/onmacon_logo.gif" alt="OnMaCon Logo">
-<div id="SlickGrid"></div>
+
+<a href=><img src="/images/onmacon_logo.gif" alt="OnMaCon"></a>
+<button id="home">Home</button>
+<input type="text" id="loadcols" value="1000" size=2>
+<button id="reload">Neu Laden</button>
+<button id="options">Optionen</button>
+<button id="help">Hilfe</button>
+<button id="debug">Debug</button>
+<table id="main" width="100%">
+	<tr>
+
+		<td valign="top" width="200">
+		<div id="myGrid"></div>
+		<div id="pager"></div>
+		</td>
+
+		<td valign="top">
+
+		<div id="accordion" style="float: right; width: 100%;">
+		<h3><a href="#">Filter</a></h3>
+		<div id="filter"></div>
+		<h3><a href="#">Gesamtsummen</a></h3>
+		<div id="sum"></div>
+		<h3><a href="#"">Was ist neu?</a></h3>
+		<div>
+		<ul>
+			<li>Mehrere Popups möglich, Popout-Funktionalität, weitere Implementierung später.</li>
+			<li>Gesamtsummen werden jetzt wie korrespondierende Zellen formatiert</li>
+		</ul>
+		</div>
+		<h3><a href="#">Offene Fragen</a></h3>
+		<div>
+		<ul>
+			<li>-</li>
+		</ul>
+		</div>
+		</div>
+		</td>
+	</tr>
+</table>
+<div id="rc"></div>
+<div id="graph"></div>
+
+
+<div id="saving" class="ui-widget-header ui-corner-all">Speichern...</div>
