SlickGrid-Dummy laeuft, alle Bilder muessten korrekte Pfade haben

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<h1>Sample App</h1>
+<a href="home"><img src="/images/onmacon_logo.gif" alt="OnMaCon"></a>
+<h1>PSMT 2.0</h1>
 <p>
-This is the home page for the
-Ruby on Rails Tutorial
-sample application.
+Das ist eine Dummy-Startseite. Die bekommt man angezeigt, sobald man eingelogged ist. Und hier geht es zum Reporting:<br>
+  <a href="/pages/report">Reporting</a>
 </p>
