--- a/app/views/pages/report.html.erb
+++ b/app/views/pages/report.html.erb
@@ -1,5 +1,5 @@
 
-<a href=><img src="/images/onmacon_logo.gif" alt="OnMaCon"></a>
+<a href="home"><img src="/images/onmacon_logo.gif" alt="OnMaCon"></a>
 <button id="home">Home</button>
 <input type="text" id="loadcols" value="1000" size=2>
 <button id="reload">Neu Laden</button>
