--- a/app/views/pages/report.html.erb
+++ b/app/views/pages/report.html.erb
@@ -1,7 +1,7 @@
 
 <a href="home"><img src="/images/onmacon_logo.gif" alt="OnMaCon"></a>
 <button id="home">Home</button>
-<input type="text" id="loadcols" value="1000" size=2>
+<input type="text" id="loadcols" value="<%= @rowsCount %>" size=2>
 <button id="reload">Neu Laden</button>
 <button id="options">Optionen</button>
 <button id="help">Hilfe</button>
