--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,16 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 
-    <link rel="stylesheet" href="/stylesheets/slick.grid.css" type="text/css"
-    	media="screen" charset="utf-8" />
-    <link rel="stylesheet" href="/stylesheets/slick.columnpicker.css" type="text/css"
-	    media="screen" charset="utf-8" />
+  <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen', :charset => 'utf-8' %>
+  <%= stylesheet_link_tag 'blueprint/print', :media => 'print', :charset => 'utf-8'%>
 
-    <link rel="stylesheet" href="/stylesheets/start/jquery-ui-1.8.6.custom.css"
-    	type="text/css" media="screen" charset="utf-8" />
-    <link rel="stylesheet" href="/stylesheets/slick.custom.css" type="text/css"
-    	media="screen" charset="utf-8" />
-    <link rel="stylesheet" href="/stylesheets/slick.pager.css" type="text/css"
-    	media="screen" charset="utf-8" />
+  <%= stylesheet_link_tag 'start/jquery-ui-1.8.6.custom', :media => 'screen', :charset => 'utf-8' %>
 
+  <%= stylesheet_link_tag 'slick.grid', :media => 'screen', :charset => 'utf-8' %>
+  <%= stylesheet_link_tag 'slick.columnpicker', :media => 'screen', :charset => 'utf-8' %>
+  <%= stylesheet_link_tag 'slick.pager', :media => 'screen', :charset => 'utf-8' %>
+  <%= stylesheet_link_tag 'slick.custom', :media => 'screen', :charset => 'utf-8' %>
+ 
     <script language="JavaScript" src="/javascripts/jquery-1.4.2.min.js"
     	charset="utf-8"></script>
     <script language="JavaScript" src="/javascripts/jquery-ui-1.8.6.custom.min.js"
