URL-Spielereien ab hier

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,8 @@
     <%= image_tag("onmacon_logo.gif", :alt => "OnMaCon", :class => "round") %>
     <nav class="round">
         <ul>
-            <li><%= link_to "Home", '/pages/home' %></li>
+            <li><%= link_to "Home", home_path %></li>
+            <li><%= link_to "Reporting", reporting_path %></li>
             <li><%= link_to "Help", '#' %></li>
             <li><%= link_to "Sign in", '#' %></li>
         </ul>
