Routes korrekt gesetzt: Jetzt Zugriff auf / sttat /pages

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,9 +3,7 @@
     <nav class="round">
         <ul>
             <li><%= link_to "Home", home_path %></li>
-            <li><%= link_to "Reporting", reporting_path %></li>
-            <li><%= link_to "Help", '#' %></li>
-            <li><%= link_to "Sign in", '#' %></li>
+            <li><%= link_to "Reporting", report_path %></li>
         </ul>
         <hr>
     </nav>
